# learn_python

./: BooleansAndString.py  ListPython.py  NoneInPython.py  anki_ques.py  classesAndGarbageCollection.py  conditions.py  conditionsAndLoops.py  dictionary_example.py  edabit.py  functionsAndTheirScope.py  github_ex.py  main.py  pyproject.toml  ticTacToe.py  todo.py  todoForAnkit.py  variablesConstantsScope.py
dataScience/: lambda_examples.py  rough_work.py
dataScience/week1/: csv.py  lambda_examples.py  list_comprehensions.py  numpy_examples.py
dataScience/week2/: pandas_examples.py  todo.py
dataScience/week3/: Energy Indicators.xls  assignment.py  scimagojr-3.xlsx
dataScience/week4/: assignment.py
