[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["GarimaMehra <garima.1.mehra@gmail.com>"]
description = ""
name = "technologicalagitatedprogrammingtool"
version = "0.1.0"
[tool.poetry.dependencies]
pandas = "^1.0"
python = "^3.7"
xlrd = "^1.2"
[tool.poetry.dev-dependencies]
